--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
+    "@alxmedeiros/eslint-config": "^1.0.0",
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.39.0",
     "typescript": "^4.9.4"
   },
   "private": true
